front: fix blank space around scenario simulation results scrollbar
The scrollbar was displayed with a margin on the right.

Multiple issues here:

- Two elements had the same "scenario-sidemenu" CSS class.
- A CSS rule was overwriting Bootstrap's paddings for one column,
  but this messes up the layout because other columns weren't
  adjusted to take up more space. Use "no-gutters" instead, which
  is designed specifically for this use-case.
- Drop the min/max widths for the train list, because this creates
  a weird blank space for some screen sizes. Leave it up to the
  parent column to pick a reasonable width.

--- a/front/src/styles/scss/applications/operationalStudies/_scenario.scss
+++ b/front/src/styles/scss/applications/operationalStudies/_scenario.scss
@@ -110,26 +110,17 @@
       height: 100%;
     }
   }
-  .scenario-sidemenu.col-hdp-3.col-xl-4.col-lg-5.col-md-6 {
-    padding: 0 !important;
-  }
 
   .scenario-sidemenu {
     display: flex;
     flex-direction: column;
     height: var(--content-height);
     background-color: var(--black5);
-    min-width: 392px;
-    @media screen and (max-width: 1280px) {
-      max-width: 472px;
-    }
     padding: 14px 24px 0 24px;
     box-shadow: inset -1px 0 var(--black5);
 
-    .scenario-sidemenu :first-child:hover {
-      .update-scenario {
-        display: flex;
-      }
+    :first-child:hover .update-scenario {
+      display: flex;
     }
 
     .scenario-details-name {
